2015-04-22  Werner Lemberg  <wl@gnu.org>

	* src/ftdiff.c (process_event): Add missing `break' statement.

2015-04-21  Werner Lemberg  <wl@gnu.org>

	[ftview] Key `w' now toggles warper (if compiled-in).

	* src/ftview.c (status): Add `warping' field.
	(event_help): Updated.
	(event_warping_change): New function.
	(Process_Event): Handle `w' key.
	(write_header, main): Updated.

2015-04-21  Werner Lemberg  <wl@gnu.org>

	[ftgrid] Key `w' now toggles warper (if compiled-in).

	This replaces the no longer existing debugging hook with a generic
	solution that uses the `warping' auto-hinter module property.

	* src/ftgrid.c (_af_debug_disable_warper): Removed.
	(GridStatusRec): s/do_warp/warping/.
	(grid_status_init, grid_status_draw_outline, event_help): Updated.
	(event_warping_change): New function.
	(Process_Event): Handle `w', not `W', and use
	`event_warping_change'.
	(main): Updated.

2015-04-21  Werner Lemberg  <wl@gnu.org>

	[ftdiff] Key `w' now toggles warper (if compiled-in).

	* src/ftdiff.c (render_mode_names): Updated.
	(ColumnStateRec): Add `warping' field.
	(render_state_init, render_state_draw, event_help): Updated.
	(process_event): Handle `w' key.

2015-04-19  Werner Lemberg  <wl@gnu.org>

	[ftdiff] Correctly reload face after changing hinting engine.

	In most cases, calling `FT_Property_Set' acts globally on the
	FT_Library object.

	* src/ftdiff.c (RenderStateRec): Remove `need_rescale', since we
	always rescale now after reloading the face.
	Update all users.
	(render_state_set_face_index): New function.
	(render_state_set_file): Remove `idx' argument.  Instead, (re)load
	font with index `state->face_index'.
	(render_state_draw): Call `render_state_set_file'.
	(event_change_face_index): New function.
	(process_event): s/render_state_set_file/event_change_face_index/.
	(main): Updated.

2015-04-18  Werner Lemberg  <wl@gnu.org>

	[ftgrid] Show advance width.

	* src/ftgrid.c (grid_status_draw_outline): Display vertical line at